--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Well its been changed, DarkGhoul45
+Hey, the class files in the bin folder aren't needed. We're just going to give him the jar file.
