--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Hey, the class files in the bin folder aren't needed. We're just going to give him the jar file.
+I know, that is just from eclipse, I can remove it if you want. Also could you work on the createarea util?
