--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+Bro I have some boundary code but github isn't letting me upload it! I'll try it when I wake up.
+
+
+
+
+
+
+
+
 KCProtect
 =============
 
