--- a/README
+++ b/README
@@ -1,7 +1,4 @@
-Bro I have some boundary code but github isn't letting me upload it! I'll try it when I wake up.
-
-
-
+I'm going to be gone for 2 days.
 
 
 
