--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-I'm going to be gone for 2 days. You have to get the Areas working.
+I'm going to be gone for 2 days. Kyle said he's going to need a few more days so he can gather the money and I think that the price shoudl be lowered it is way too expensive.
 
 
 
