--- a/README
+++ b/README
@@ -1,16 +1,1 @@
-I'm going to be gone for 2 days. Kyle said he's going to need a few more days so he can gather the money and I think that the price shoudl be lowered it is way too expensive.
-
-
-
-
-
-KCProtect
-=============
-
-ToDo
-----
-Finish Config
-Region Checking (BlockBreak and BlockPlace)
-
-Done
-----
+Everything seems to be ok. Just text the code. I will be gone for two days and when I get back we can talk to Kyle about the prices of this project (Work Ethnic). I thought that this project would be tough but by doing this project I think that I have found the secret of Java. This project made my understanding of Java change dramatically.
