--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Everything seems to be ok. Just text the code. I will be gone for two days and when I get back we can talk to Kyle about the prices of this project (Work Ethnic). I thought that this project would be tough but by doing this project I think that I have found the secret of Java. This project made my understanding of Java change dramatically.
+Free Source code for all that care to have it.
