--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+[![KCProtect Maven Package](https://github.com/FreedomFaighter/KCProtect/actions/workflows/maven-publish.yml/badge.svg)](https://github.com/FreedomFaighter/KCProtect/actions/workflows/maven-publish.yml)
+
 Free Source code for all that care to have it.
